Fish sanctuary (closes #54)

--- a/Features.org
+++ b/Features.org
@@ -146,6 +146,8 @@
      piglins give enchanted armor as a result of bartering
    + sheepcolor :: When shearing a sheep, the color of wool dropped is
      randomized
+   + fishsanctuary :: If a fish is drying out, it will create water to
+     survive
 ** EGG FEATURES
    + eggs :: Almost any mob (or diamonds) can spawn from an egg
    + eggarrow :: Skeletons will fire eggs in addition to arrows
