--- a/Features.org
+++ b/Features.org
@@ -61,6 +61,7 @@
      - Mining Fatigue 5
      - Regeneration 5
    + rainwater :: Players deplete oxygen in the rain
+   + cactuskick :: Looking at a cactus causes the player to be kicked
 ** CUSTOM SPAWNING FEATURES
    + weepingangel :: Armor stands will chase you when you're not
                      looking at them, and armor stands will rarely
