--- a/Features.org
+++ b/Features.org
@@ -23,7 +23,7 @@
                    sandstone, red sandstone, gravel, end stone
    + witherrose :: All flowers (and berry bushes) give the Wither
                    effect on contact now, or when picked up
-   + classiclava :: Lava spreads further in the overworld and the End
+   + classiclava :: Lava spreads further in the overworld and the Nether
    + fall :: Taking fall damage causes you to suffer the Slowness and
              Confusion effects for a bit
    + axolotl :: When an axolotl dies, the nearest player (within 32
