Update docs for bee effect

--- a/Features.org
+++ b/Features.org
@@ -158,6 +158,7 @@
      when they hit them
    + blood :: Whenever a player takes damage, redstone wire is placed
      at their feet
+   + apache :: Bees have a chance of spawning named "Apache"
 ** EGG FEATURES
    + eggs :: Almost any mob (or diamonds) can spawn from an egg
    + eggarrow :: Skeletons will fire eggs in addition to arrows
