--- a/Features.org
+++ b/Features.org
@@ -330,6 +330,7 @@
    + sinkhole :: There are random 1x1 holes in every world
    + obsidianwall :: 3-block high obsidian walls spawn in a grid shape
      in the overworld
+   + nice :: Y=69 never generates anything at world generation time
 * IDEAS (UNIMPLEMENTED)
   + Wolves?
   + Fishing?
