--- a/Features.org
+++ b/Features.org
@@ -267,6 +267,8 @@
        reward
    + spatialrend :: Players will be teleported to each other's
      positions at random intervals
+   + kamekschaos :: Kamek swaps the positions of items in your own
+     inventory
 ** MISCELLANEOUS FEATURES
    + anvil :: If you stand still for more than ten seconds, an anvil
               will drop on your head; anvils can be smelted into iron
