--- a/Features.org
+++ b/Features.org
@@ -271,6 +271,7 @@
      inventory
    + heavyrain :: Anvils rain down on everyone continuously for a bit
    + sandstorm :: Sand rains down on everyone continuously for a bit
+   + sandblaster :: A giant blob of sand falls on everyone at random
 ** MISCELLANEOUS FEATURES
    + anvil :: If you stand still for more than ten seconds, an anvil
               will drop on your head; anvils can be smelted into iron
