Prisoner's dilemma event

--- a/Features.org
+++ b/Features.org
@@ -272,6 +272,8 @@
    + heavyrain :: Anvils rain down on everyone continuously for a bit
    + sandstorm :: Sand rains down on everyone continuously for a bit
    + sandblaster :: A giant blob of sand falls on everyone at random
+   + prisonersdilemma :: Two players are given the opportunity to
+     SPLIT or STEAL a bounty
 ** MISCELLANEOUS FEATURES
    + anvil :: If you stand still for more than ten seconds, an anvil
               will drop on your head; anvils can be smelted into iron
