--- a/Features.org
+++ b/Features.org
@@ -31,9 +31,15 @@
    + ghastlava :: Ghast fireballs erupt into lava on contact (the lava
                   spawned by this is immune to **classiclava**
                   effects, for reasons of sanity)
-   + temperature :: A player with no armor will take damage in cold
-                    biomes, and a player with armor will take damage
-                    in hot biomes
+   + temperature :: Biomes in extreme temperatures will damage the
+     player if they're not well-dressed.
+     - Extremely cold biomes will damage the player. They can protect
+       themselves by (1) wearing any chestplate + leggings, or (2)
+       holding a warm object like a campfire in their hand.
+     - Extremely hot biomes will damage the player. They can protect
+       themselves by (1) not wearing any heavy (i.e. non-leather)
+       armor, (2) holding a cool object like an ice block, or (3)
+       staying in the rain or snow.
    + spillage :: When a bucket item is dropped for any reason, its
                  contents will spill on the ground
    + eggshells :: The block two cubes below the player is constantly
