--- a/Features.org
+++ b/Features.org
@@ -241,8 +241,7 @@
    + nylium :: Looking at nylium transforms it into primed TNT
 ** CUSTOM RECIPE FEATURES
    + stonetools :: All recipes which produce stone tools are disabled
-   + dirtrecipe :: Nine dirt can be crafted into a stick; nine sticks
-                   can be crafted into dirt
+   + dirtrecipe :: Nine sticks can be crafted into dirt
    + chainmailrecipe :: Lava buckets can be crafted into chainmail
      armor
    + blazeeye :: Flint and steel + an ender pearl crafts a Blaze Eye,
