--- a/Features.org
+++ b/Features.org
@@ -143,6 +143,7 @@
                      darkness, a Warden will appear near you
    + allays :: Allays automatically bond to the nearest player and
                have an infinite supply of flowers
+     - A golden sword can instantly kill any allay.
    + johnny :: Breeding animals sometimes spawns a Vindicator named
      "Johnny"
    + solidswap :: Lava running on water creates obsidian, while water
